log
vi.,  6 de may. de 2022 12:01:36: 
 heap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 5/70
1c7bf56
vi.,  6 de may. de 2022 12:03:02: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|3
total_score: 15/70
f4c3850
vi.,  6 de may. de 2022 12:03:52: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
76269e0
vi.,  6 de may. de 2022 12:06:18: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:63:5: error: statement with no effect [-Werror=unused-value]
    h->capac;
    ~^~~~~~~
heap.c:61:21: error: 'h' is used uninitialized in this function [-Werror=uninitialized]
    Heap * h=calloc(h->capac,sizeof(Heap));
                    ~^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4d2273c
vi.,  6 de may. de 2022 12:06:35: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5db3604
vi.,  6 de may. de 2022 12:08:17: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
06b3888
vi.,  6 de may. de 2022 12:10:36: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
C:\Users\ESTUDI~1\AppData\Local\Temp\cceY86OV.o:test.c:(.text+0x3ba): undefined reference to `createHeap'
collect2.exe: error: ld returned 1 exit status
Compilation failed
15b4154
vi.,  6 de may. de 2022 12:11:03: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 15/70
7262a4b
do.,  8 de may. de 2022 10:16:14: 
 tests:  2|3
total_score: 15/70
bba5f42
do.,  8 de may. de 2022 10:17:37: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|3
total_score: 15/70
635ed3f
do.,  8 de may. de 2022 10:18:00: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 15/70
838a2fd
do.,  8 de may. de 2022 10:19:49: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 15/70
4b57d04
do.,  8 de may. de 2022 10:34:16: 
 heap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
b920331
do.,  8 de may. de 2022 10:35:27: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 25/70
d47044e
do.,  8 de may. de 2022 18:37:32: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
b9a9c7e
do.,  8 de may. de 2022 18:47:59: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:59:36: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    pq->heapArray[pq->size].priority=NULL;
                                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
8965bcd
do.,  8 de may. de 2022 18:48:15: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
ab8c56f
do.,  8 de may. de 2022 18:48:59: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
7b593a2
do.,  8 de may. de 2022 18:49:19: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
024c712
do.,  8 de may. de 2022 18:51:54: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'prin':
heap.c:42:17: error: format '%d' expects argument of type 'int', but argument 2 has type 'heapElem {aka struct nodo}' [-Werror=format=]
       printf("-%d-",pq->heapArray[i]);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cd30754
do.,  8 de may. de 2022 18:52:06: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
0a418c6
do.,  8 de may. de 2022 18:53:15: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 25/70
c4af800
do.,  8 de may. de 2022 18:54:46: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 25/70
036b373
do.,  8 de may. de 2022 18:57:20: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
8fb9836
do.,  8 de may. de 2022 18:57:57: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
934adb6
do.,  8 de may. de 2022 18:58:32: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
dffb778
